# api-x3-inp

./: pyproject.toml
api_x3_inp/: app.py
api_x3_inp/config/: settings.py
api_x3_inp/database/: database.py
api_x3_inp/models/: salesInvoice.py  subscription.py
api_x3_inp/routers/: salesInvoice.py  subscription.py
api_x3_inp/schemas/: salesInvoice.py  schemas.py  subscription.py
